--- a/.github/workflows/update_kubernetes_manifests.yaml
+++ b/.github/workflows/update_kubernetes_manifests.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Update data pipeline services image tag in kustomization
         if: inputs.service != 'insights_api' && inputs.service != 'frontend'                                                                                         
         run: |                                                                                                                         
-          cd manifests/tenants/cyphria/data_pipeline/${{ inputs.service }}/                                                            
+          cd manifests/tenants/cyphria/data_pipeline_${{ inputs.service }}/                                                            
           sed -i "s|newTag:.*|newTag: ${{ inputs.version }}|" kustomization.yaml
 
       - name: Commit and push frontend changes
@@ -70,6 +70,6 @@ jobs:
           cd .                                                                                                            
           git config user.name "github-actions[bot]"                                                                                   
           git config user.email "github-actions[bot]@users.noreply.github.com"                                                         
-          git add manifests/tenants/cyphria/data_pipeline_${{ inputs.service }}_service/kustomization.yaml                                                   
+          git add manifests/tenants/cyphria/data_pipeline_${{ inputs.service }}/kustomization.yaml                                                   
           git commit -m "chore: update ${{ inputs.service }} to ${{ inputs.version }}"                                                 
           git push 
