--- a/backend/data_pipeline/ingestion/dockerfile
+++ b/backend/data_pipeline/ingestion/dockerfile
@@ -5,12 +5,15 @@ WORKDIR /app
 # install uv
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
+# Copy shared package first
+COPY shared/ ./shared/
+
 # for dependency files
-COPY pyproject.toml uv.lock ./
+COPY data_pipeline/ingestion/pyproject.toml data_pipeline/ingestion/uv.lock ./
 RUN uv sync --frozen --no-dev
 
 # for source code
-COPY src/* ./src/
+COPY data_pipeline/ingestion/src/* ./src/
 
 EXPOSE 8000
 
