--- a/backend/data_pipeline/llm_summary/pyproject.toml
+++ b/backend/data_pipeline/llm_summary/pyproject.toml
@@ -12,18 +12,23 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "pytest-asyncio>=1.3.0",
     "testcontainers[postgres]>=4.14.0",
+    "shared"
 ]
 
 [tool.pyrefly]
 python-version = "3.13"
 untyped-def-behavior = "check-and-infer-return-any"
-search-path = ["."]
+search-path = [".", "../../shared"] # summary root + shared package
+venv = ".venv"
 
 [tool.pyrefly.errors]
 unannotated-parameter = "error"
 unannotated-return = "error"
 unannotated-attribute = "error"
 implicit-any = "error"
+
+[tool.uv.sources]
+shared = { path = "../../shared", editable = true }
 
 [dependency-groups]
 dev = [
