--- a/backend/data_pipeline/sentiment_analysis/pyproject.toml
+++ b/backend/data_pipeline/sentiment_analysis/pyproject.toml
@@ -15,10 +15,12 @@ dependencies = [
     "pydantic-settings>=2.12.0",
     "pydantic>=2.12.5",
     "fastapi[standard]>=0.128.0",
+    "shared"
 ]
 
 [tool.uv.sources]
 torch = { index = "pytorch-cu124" }
+shared = { path = "../../shared", editable = true }
 
 [[tool.uv.index]]
 name = "pytorch-cu124"
@@ -28,7 +30,8 @@ explicit = true
 [tool.pyrefly]
 python-version = "3.13"
 untyped-def-behavior = "check-and-infer-return-any"
-search-path = ["."] # so pyrefly knows we are running from ingestion folder not ingestion/src
+search-path = [".", "../../shared"] # sentiment analysis root + shared package
+venv = ".venv"
 
 [tool.pyrefly.errors]
 unannotated-parameter = "error"
